src/main/java/com/snk/lua/Lua4Parser.java
// Generated from /Users/fripside/IdeaProjects/LuaParser/src/main/resources/Lua4.g4 by ANTLR 4.7
package com.snk.lua;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Lua4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		If=1, Else=2, Elif=3, Do=4, End=5, Break=6, For=7, In=8, Local=9, Nil=10, 
		Not=11, Repeat=12, Return=13, Then=14, Until=15, While=16, Func=17, And=18, 
		Or=19, Equals=20, NEquals=21, GTEquals=22, LTEquals=23, GT=24, LT=25, 
		Add=26, Subtract=27, Multiply=28, Divide=29, Modulus=30, Pow=31, OBrace=32, 
		CBrace=33, OBracket=34, CBracket=35, OParen=36, CParen=37, SColon=38, 
		Assign=39, Comma=40, Colon=41, DOT=42, Conact=43, Args=44, String=45, 
		Name=46, WS=47, Number=48, Comment=49;
	public static final int
		RULE_chunk = 0, RULE_block = 1, RULE_statement = 2, RULE_returnStat = 3, 
		RULE_assignStat = 4, RULE_forStat = 5, RULE_whileStat = 6, RULE_repeatStat = 7, 
		RULE_ifStat = 8, RULE_expression = 9, RULE_exprList = 10, RULE_binOp = 11, 
		RULE_rightOp = 12, RULE_unaryOp = 13, RULE_prefixExp = 14, RULE_funcStat = 15, 
		RULE_funcBody = 16, RULE_funcArgs = 17, RULE_funcCall = 18, RULE_var = 19, 
		RULE_varOrExp = 20, RULE_funcCallArg = 21, RULE_varSuffix = 22, RULE_varList = 23, 
		RULE_upvalue = 24, RULE_paramList = 25, RULE_nameList = 26, RULE_tableConstructor = 27, 
		RULE_fieldList = 28, RULE_field = 29, RULE_fieldsep = 30;
	public static final String[] ruleNames = {
		"chunk", "block", "statement", "returnStat", "assignStat", "forStat", 
		"whileStat", "repeatStat", "ifStat", "expression", "exprList", "binOp", 
		"rightOp", "unaryOp", "prefixExp", "funcStat", "funcBody", "funcArgs", 
		"funcCall", "var", "varOrExp", "funcCallArg", "varSuffix", "varList", 
		"upvalue", "paramList", "nameList", "tableConstructor", "fieldList", "field", 
		"fieldsep"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'if'", "'else'", "'elseif'", "'do'", "'end'", "'break'", "'for'", 
		"'in'", "'local'", "'nil'", "'not'", "'repeat'", "'return'", "'then'", 
		"'until'", "'while'", "'function'", "'and'", "'or'", "'=='", "'~='", "'>='", 
		"'<='", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'{'", 
		"'}'", "'['", "']'", "'('", "')'", "';'", "'='", "','", "':'", "'.'", 
		"'..'", "'...'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "If", "Else", "Elif", "Do", "End", "Break", "For", "In", "Local", 
		"Nil", "Not", "Repeat", "Return", "Then", "Until", "While", "Func", "And", 
		"Or", "Equals", "NEquals", "GTEquals", "LTEquals", "GT", "LT", "Add", 
		"Subtract", "Multiply", "Divide", "Modulus", "Pow", "OBrace", "CBrace", 
		"OBracket", "CBracket", "OParen", "CParen", "SColon", "Assign", "Comma", 
		"Colon", "DOT", "Conact", "Args", "String", "Name", "WS", "Number", "Comment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lua4.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Lua4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ChunkContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Lua4Parser.EOF, 0); }
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterChunk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitChunk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			block();
			setState(63);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ReturnStatContext returnStat() {
			return getRuleContext(ReturnStatContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << If) | (1L << Do) | (1L << Break) | (1L << For) | (1L << Local) | (1L << Repeat) | (1L << While) | (1L << Func) | (1L << Modulus) | (1L << OParen) | (1L << SColon) | (1L << Name))) != 0)) {
				{
				{
				setState(65);
				statement();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Return) {
				{
				setState(71);
				returnStat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignStatContext assignStat() {
			return getRuleContext(AssignStatContext.class,0);
		}
		public FuncStatContext funcStat() {
			return getRuleContext(FuncStatContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public TerminalNode Break() { return getToken(Lua4Parser.Break, 0); }
		public ForStatContext forStat() {
			return getRuleContext(ForStatContext.class,0);
		}
		public TerminalNode Do() { return getToken(Lua4Parser.Do, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode End() { return getToken(Lua4Parser.End, 0); }
		public WhileStatContext whileStat() {
			return getRuleContext(WhileStatContext.class,0);
		}
		public RepeatStatContext repeatStat() {
			return getRuleContext(RepeatStatContext.class,0);
		}
		public IfStatContext ifStat() {
			return getRuleContext(IfStatContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(SColon);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				assignStat();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				funcStat();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				funcCall();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				match(Break);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(79);
				forStat();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(80);
				match(Do);
				setState(81);
				block();
				setState(82);
				match(End);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(84);
				whileStat();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				repeatStat();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(86);
				ifStat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatContext extends ParserRuleContext {
		public TerminalNode Return() { return getToken(Lua4Parser.Return, 0); }
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public ReturnStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterReturnStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitReturnStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitReturnStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatContext returnStat() throws RecognitionException {
		ReturnStatContext _localctx = new ReturnStatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_returnStat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(Return);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Nil) | (1L << Not) | (1L << Func) | (1L << Subtract) | (1L << Modulus) | (1L << OBrace) | (1L << OParen) | (1L << Args) | (1L << String) | (1L << Name) | (1L << Number))) != 0)) {
				{
				setState(90);
				exprList();
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SColon) {
				{
				setState(93);
				match(SColon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStatContext extends ParserRuleContext {
		public AssignStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStat; }
	 
		public AssignStatContext() { }
		public void copyFrom(AssignStatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetValStatContext extends AssignStatContext {
		public VarListContext varList() {
			return getRuleContext(VarListContext.class,0);
		}
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public SetValStatContext(AssignStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterSetValStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitSetValStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitSetValStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InitLocalValStatContext extends AssignStatContext {
		public TerminalNode Local() { return getToken(Lua4Parser.Local, 0); }
		public NameListContext nameList() {
			return getRuleContext(NameListContext.class,0);
		}
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public InitLocalValStatContext(AssignStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterInitLocalValStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitInitLocalValStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitInitLocalValStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignStatContext assignStat() throws RecognitionException {
		AssignStatContext _localctx = new AssignStatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignStat);
		int _la;
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Modulus:
			case Name:
				_localctx = new SetValStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				varList();
				setState(97);
				match(Assign);
				setState(98);
				exprList();
				}
				break;
			case Local:
				_localctx = new InitLocalValStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				match(Local);
				setState(101);
				nameList();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Assign) {
					{
					setState(102);
					match(Assign);
					setState(103);
					exprList();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForStatContext extends ParserRuleContext {
		public TerminalNode For() { return getToken(Lua4Parser.For, 0); }
		public List<TerminalNode> Name() { return getTokens(Lua4Parser.Name); }
		public TerminalNode Name(int i) {
			return getToken(Lua4Parser.Name, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode Do() { return getToken(Lua4Parser.Do, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode End() { return getToken(Lua4Parser.End, 0); }
		public TerminalNode In() { return getToken(Lua4Parser.In, 0); }
		public ForStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterForStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitForStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitForStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForStatContext forStat() throws RecognitionException {
		ForStatContext _localctx = new ForStatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_forStat);
		int _la;
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(For);
				setState(109);
				match(Name);
				setState(110);
				match(Assign);
				setState(111);
				expression(0);
				setState(112);
				match(Comma);
				setState(113);
				expression(0);
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Comma) {
					{
					setState(114);
					match(Comma);
					setState(115);
					expression(0);
					}
				}

				setState(118);
				match(Do);
				setState(119);
				block();
				setState(120);
				match(End);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(For);
				setState(123);
				match(Name);
				setState(124);
				match(Comma);
				setState(125);
				match(Name);
				setState(126);
				match(In);
				setState(127);
				expression(0);
				setState(128);
				match(Do);
				setState(129);
				block();
				setState(130);
				match(End);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStatContext extends ParserRuleContext {
		public TerminalNode While() { return getToken(Lua4Parser.While, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Do() { return getToken(Lua4Parser.Do, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode End() { return getToken(Lua4Parser.End, 0); }
		public WhileStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterWhileStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitWhileStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitWhileStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStatContext whileStat() throws RecognitionException {
		WhileStatContext _localctx = new WhileStatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whileStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(While);
			setState(135);
			expression(0);
			setState(136);
			match(Do);
			setState(137);
			block();
			setState(138);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepeatStatContext extends ParserRuleContext {
		public TerminalNode Repeat() { return getToken(Lua4Parser.Repeat, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode Until() { return getToken(Lua4Parser.Until, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public RepeatStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeatStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterRepeatStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitRepeatStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitRepeatStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepeatStatContext repeatStat() throws RecognitionException {
		RepeatStatContext _localctx = new RepeatStatContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_repeatStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(Repeat);
			setState(141);
			block();
			setState(142);
			match(Until);
			setState(143);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(Lua4Parser.If, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> Then() { return getTokens(Lua4Parser.Then); }
		public TerminalNode Then(int i) {
			return getToken(Lua4Parser.Then, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode End() { return getToken(Lua4Parser.End, 0); }
		public List<TerminalNode> Elif() { return getTokens(Lua4Parser.Elif); }
		public TerminalNode Elif(int i) {
			return getToken(Lua4Parser.Elif, i);
		}
		public TerminalNode Else() { return getToken(Lua4Parser.Else, 0); }
		public IfStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).enterIfStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lua4Listener ) ((Lua4Listener)listener).exitIfStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lua4Visitor ) return ((Lua4Visitor<? extends T>)visitor).visitIfStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatContext ifStat() throws RecognitionException {
		IfStatContext _localctx = new IfStatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifStat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(If);
			setState(146);
			expression(0);
			setState(147);
			match(Then);
			setState(148);
			block();
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Elif) {
				{
				{
				setState(149);
				match(Elif);
				setState(150);
				expression(0);
				setState(151);
				match(Then);
				setState(152);
				block();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Else) {
				{
				setState(159);
				match(Else);
				setState(160);
				block();
				}
			}

			setState(163);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
